feat: usage of indixes in postgres to accelerate the search speed
