# cmd/mb3server/api/openapi.yaml
@@ -174,6 +174,26 @@ paths:
                 $ref: '#/components/schemas/MBRecord'
           description: A MassBank record
       summary: Get a MassBank record
+  /records/{accession}/simple:
+    get:
+      operationId: getSimpleRecord
+      parameters:
+      - description: The accession id of the record
+        explode: false
+        in: path
+        name: accession
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MBRecord'
+          description: A simple MassBank record
+      summary: Get a MassBank record in simple format
   /records/{accession}/svg:
     get:
       operationId: getSVG
