# cmd/mb3server/src/api.go
@@ -26,6 +26,7 @@ type DefaultAPIRouter interface {
 	GetRecords(http.ResponseWriter, *http.Request)
 	GetSVG(http.ResponseWriter, *http.Request)
 	GetSimilarity(http.ResponseWriter, *http.Request)
+	GetSimpleRecord(http.ResponseWriter, *http.Request)
 }
 
 // DefaultAPIServicer defines the api actions for the DefaultAPI service
@@ -41,4 +42,5 @@ type DefaultAPIServicer interface {
 	GetRecords(context.Context, []string, string, []string, string, string, string, float64, string, []string, int32, []string, []string, int32, int32, int32, string, []string) (ImplResponse, error)
 	GetSVG(context.Context, string) (ImplResponse, error)
 	GetSimilarity(context.Context, []string, []string, []string, []string, string, string, float64, string, int32, int32, []string) (ImplResponse, error)
+	GetSimpleRecord(context.Context, string) (ImplResponse, error)
 }
